--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.2",
+    "chalk-pipe": "^4.0.0",
     "cheerio": "^1.0.0-rc.3",
+    "colors": "^1.4.0",
     "commander": "^5.1.0",
     "date-fns": "^2.12.0",
     "date-fns-tz": "^1.0.10",
     "dotenv": "^8.2.0",
     "inquirer": "^7.1.0",
     "inquirer-search-list": "^1.2.6",
-    "mongoose": "^5.9.10",
     "node-localstorage": "^2.1.6",
-    "puppeteer": "^2.1.1",
     "puppeteer-extra": "^3.1.9",
     "puppeteer-extra-plugin-stealth": "^2.4.9"
   },
